--- a/README
+++ b/README
@@ -26,19 +26,23 @@ Steps:
 	1. edit the Makefile and adjust the following entries as required:
 		a. TARGETDIR - this should be set to the desired location for the cgi files (e.g. /srv/www/cgi-bin6)
 		b. URLPATH - this is the URL by which the cgi files will be accessed from your webserver
-			e.g. http://ipv6.chappell-family.com/cgi-bin6/ipscan-js.cgi then set URLPATH=/cgi-bin6
-		c. SQLITE3BIN - this should be set to point to the location of your sqlite3 binary (e.g. /usr/bin/sqlite3)
+                   e.g. http://ipv6.chappell-family.com/cgi-bin6/ipscan-js.cgi then set URLPATH=/cgi-bin6
+		c. SQLITE3BIN - this should be set to point to the location of your sqlite3 binary
+                   (e.g. /usr/bin/sqlite3)
 		d. TXTTARGET and JSTARGET - these define the names of the two cgi objects that will be created
 
 	2. edit ipscan.h and adjust *at least* the following entries:
-		a. EMAILADDRESS - suggest you use a non-personal email address if the webserver will be world-accessible
-		b. DBDIR - the sqlite3 database files will be created here - ensure the specified directory exists and is write/execute by apache!
+		a. EMAILADDRESS - suggest you use a non-personal email address if the webserver will 
+                   be world-accessible
+		b. DBDIR - the sqlite3 database files will be created here - ensure the specified 
+                   directory exists and is write/execute by apache!
 
 	3. edit ipscan_portlist.h and change the list of ports to be tested, if required
 	
 	4. make && make install
 	
-	5. make sure that the URL path directory (which may well be accessed via an Apache alias) is enabled to execute cgi:
+	5. make sure that the URL path directory (which may well be accessed via an Apache alias) 
+           is enabled to execute cgi:
 	
 	ScriptAlias /cgi-bin6/ "/srv/www/cgi-bin6/"
         <Directory "/srv/www/cgi-bin6">
@@ -53,8 +57,7 @@ Steps:
 
 	7. Check the apache access and error logs for messages. ipscan will place summary messages in the error log for all scans.
 	
-For those considering providing ipscan access on the public internet consider adding a landing page which will check for 
-host IP address suitability prior to allowing access to the cgi script(s) - most (all?) search engine spiders currently only use IPv4. 
+For those considering providing ipscan access on the public internet consider adding a landing page which will check for host IP address suitability prior to allowing access to the cgi script(s) - most (all?) search engine spiders currently only use IPv4. 
 It may be advisable to only offer direct links to the cgi scripts if the address checks were successful.
 
 See http://ipv6.chappell-family.com/ipv6tcptest/ as an example.
