--- a/README
+++ b/README
@@ -19,7 +19,7 @@ along with ipscan. If not, see <http://www.gnu.org/licenses/>.
 
 ---
 
-ipscan requires access to a MySQL database and the associated client development libraries (libmysqlclient-dev) to be installed on the server which will act as your scanner. ipscan is known to build on: Opensuse versions 11.1, 11.4 and 12.1; Centos 6.2; Fedora 16; Ubuntu 12.04 and Mint 12 and run alongside Apache version 2.2.
+ipscan requires access to a MySQL database and the associated client development libraries (libmysqlclient-dev or similar) to be installed on the server which will act as your scanner. ipscan is known to build on: Opensuse versions 11.1/11.4/12.1, Centos 6.2, Fedora 16, Ubuntu 12.04, Mint 12 and FreeBSD 9 and run alongside Apache version 2.2. Please let me know of any other build successes/failures on unlisted platforms.
 
 IMPORTANT: when UPGRADING from versions before 0.90: a database change has occurred and consequently it is necessary that you remove your existing database prior to building and installing versions 0.90 and later. See step 4 below for details.
 
@@ -69,6 +69,8 @@ Installation Steps:
        
     5. make && make install
        Given that the suid bit is set on the installed executables it is necessary to perform the 'make install' stage as root user.
+       
+       Note: please use gmake under FreeBSD.
     
     6. make sure that the URI path directory (which may well be accessed via an Apache alias) is enabled to execute cgi:
     
