--- a/README
+++ b/README
@@ -93,7 +93,10 @@ Installation Steps:
           
        IMPORTANT NOTE: the steps listed in step 7 above are only indicative of what may be required, and depend upon your existing installation. Please consult the SELinux documentation for further details. 
           
-    8. Browse from a machine that you want testing towards your servers' IPv6 address, e.g. w3m http://ipv6.example.com/cgi-bin6/ipscan-txt.cgi or: lynx http://[2001:db8::1]/cgi-bin6/ipscan-txt.cgi  
+    8. Browse from a machine that you want testing towards your servers' IPv6 address, e.g. 
+       w3m http://ipv6.chappell-family.com/cgi-bin6/ipscan-txt.cgi 
+       or: 
+       lynx http://[2001:470:1f08:185c::2]/cgi-bin6/ipscan-txt.cgi  
 
     9. Check the web server access and error logs for messages. ipscan will place summary messages in the error log for all scans, if enabled to do so (default option). It is possible to enable copious amounts of debug by uncommenting the debug #define statements in ipscan.h.
     
