--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Installation Steps:
         a. TARGETDIR - this should be set to the desired location for the cgi files (e.g. /srv/www/cgi-bin6)
                    Ensure that the selected target directory exists, with appropriate permissions, before attempting to install the final executables.
         b. URIPATH - this is the request URI by which the cgi files will be accessed from your webserver
-                   e.g. http://ipv6.chappell-family.com/cgi-bin6/ipscan-js.cgi then set URIPATH=/cgi-bin6
+                   e.g. http://www6.ipv6.chappell-family.com/cgi-bin6/ipscan-js.cgi then set URIPATH=/cgi-bin6
         c. TXTTARGET and JSTARGET - these define the names of the two cgi objects that will be created
 
     2. edit ipscan.h and adjust *at least* the following entries:
@@ -94,7 +94,7 @@ Installation Steps:
        IMPORTANT NOTE: the steps listed in step 7 above are only indicative of what may be required, and depend upon your existing installation. Please consult the SELinux documentation for further details. 
           
     8. Browse from a machine that you want testing towards your servers' IPv6 address, e.g. 
-       w3m http://ipv6.chappell-family.com/cgi-bin6/ipscan-txt.cgi 
+       w3m http://www6.ipv6.chappell-family.com/cgi-bin6/ipscan-txt.cgi 
        or: 
        lynx http://[2001:470:1f08:185c::2]/cgi-bin6/ipscan-txt.cgi  
 
