--- a/README
+++ b/README
@@ -114,7 +114,7 @@ Installation Steps:
 
 Getting further help:
 =====================
-A demonstration Raspberry Pi IPv6 firewall checker is available to IPv6 enabled clients at: http://pi.ipv6.chappell-family.com
+A demonstration Raspberry Pi IPv6 firewall checker is available to IPv6 enabled clients at: http://pi.ipv6.chappell-family.co.uk
 
-If you need further help then please email me at: webmaster@chappell-family.com or visit my ipscan wiki at: http://ipv6.chappell-family.com/timswiki/index.php5/IPv6
+If you need further help then please email me at: webmaster@chappell-family.com or visit my ipscan wiki at: http://ipv6.chappell-family.com/timswiki/index.php5?title=IPv6
 
