--- a/README
+++ b/README
@@ -31,6 +31,9 @@ Installation Steps:
         b. URIPATH - this is the request URI by which the cgi files will be accessed from your webserver
                    e.g. http://www6.ipv6.chappell-family.com/cgi-bin6/ipscan-js.cgi then set URIPATH=/cgi-bin6
         c. TXTTARGET and JSTARGET - these define the names of the two cgi objects that will be created
+        d. SETUID_AVAILABLE and UDP_AVAILABLE - if you're running the service on a machine where you, or
+                   the web server, don't have permissions to call setuid() or create UDP sockets then these features
+                   need to be disabled.
 
     2. edit ipscan.h and adjust *at least* the following entries:
         a. EMAILADDRESS - suggest you use a non-personal email address if the webserver will be world-accessible
@@ -98,7 +101,7 @@ Installation Steps:
     8. Browse from a machine that you want testing towards your servers' IPv6 address, e.g. 
        w3m http://www6.ipv6.chappell-family.com/cgi-bin6/ipscan-txt.cgi 
        or: 
-       lynx http://[2001:470:971f:3:ba27:ebff:fecc:dc7c]/cgi-bin6/ipscan-txt.cgi  
+       lynx http://[2001:470:1f08:185c::2]/cgi-bin6/ipscan-txt.cgi  
 
     9. Check the web server access and error logs for messages. ipscan will place summary messages in the error log if enabled to do so (this is NOT the default option - change IPSCAN_LOGVERBOSITY to 1 to enable this). It is possible to enable copious amounts of debug by uncommenting the debug #define statements in ipscan.h.
     
