move to memset()

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ipscan - an http-initiated IPv6 port scanner, offering text-only and javascript browser compatible versions.
 
-Copyright (C) 2011-2013 Tim Chappell.
+Copyright (C) 2011-2014 Tim Chappell.
 
 This file is part of ipscan.
 
@@ -19,7 +19,7 @@ along with ipscan. If not, see <http://www.gnu.org/licenses/>.
 
 ---
 
-ipscan requires access to a MySQL database and the associated client development libraries (libmysqlclient-dev or similar) to be installed on the server which will act as your scanner. ipscan is known to build on: Opensuse versions 11.1/11.4/12.1, Centos 6.2, Fedora 16, Ubuntu 12.04, Mint 12, FreeBSD 9 and Arch Linux ARM (Raspberry Pi) and run alongside Apache version 2.2. Please let me know of any other build successes/failures on unlisted platforms.
+ipscan requires access to a MySQL database and the associated client development libraries (libmysqlclient-dev or similar) to be installed on the server which will act as your scanner. ipscan is known to build on: Opensuse versions 11.1/11.4/12.1/13.1, Centos 6.2, Fedora 16, Ubuntu 12.04, Mint 12, FreeBSD 9 and Arch Linux ARM (Raspberry Pi) and run alongside Apache version 2.2 and 2.4. Please let me know of any other build successes/failures on unlisted platforms.
 
 IMPORTANT: when UPGRADING from versions before 0.90: a database change has occurred and consequently it is necessary that you remove your existing database prior to building and installing versions 0.90 and later. See step 4 below for details.
 
