--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ipscan - an http-initiated IPv6 port scanner, offering text-only and javascript browser compatible versions.
 
-Copyright (C) 2011-2014 Tim Chappell.
+Copyright (C) 2011-2015 Tim Chappell.
 
 This file is part of ipscan.
 
@@ -104,7 +104,7 @@ Installation Steps:
     
        Don't forget to restart your web server after making the appropriate modifications.
     
-    7. If you are using an SELinux-enabled distribution (e.g. Fedora 16) then it may be necessary to perform additional 
+    7. If you are using an SELinux-enabled distribution (e.g. Fedora) then it may be necessary to perform additional 
        steps similar to those outlined below:
        a. Ensure that your Apache server is enabled to support cgi, as root type:
           # setsebool -P httpd_enable_cgi on
@@ -116,7 +116,7 @@ Installation Steps:
        depend upon your existing installation. Please consult the SELinux documentation for further details. 
           
     8. Browse from a machine that you want testing towards your servers' IPv6 address, e.g. 
-       w3m http://www6.ipv6.chappell-family.co.uk/cgi-bin6/ipscan-fast-txt.cgi 
+       w3m http://www6.chappell-family.co.uk/cgi-bin6/ipscan-fast-txt.cgi 
        or: 
        lynx http://[2001:470:1f08:185c::2]/cgi-bin6/ipscan-txt.cgi  
 
@@ -171,7 +171,8 @@ Getting further help:
 =====================
 A demonstration Raspberry Pi IPv6 firewall checker is available to IPv6 enabled clients at: http://pi.ipv6.chappell-family.co.uk
 
-If you need further help then please email me at: webmaster@chappell-family.com or visit my ipscan wiki at: 
+If you need further help then please email me at: webmaster@chappell-family.com or visit my ipscan wiki at:
+ 
 http://ipv6.chappell-family.com/timswiki/index.php5?title=IPv6
 
 
