--- a/README
+++ b/README
@@ -37,7 +37,7 @@ Installation Steps:
                    Ensure that the selected target directory exists, with appropriate permissions, before 
                    attempting to install the final executables.
         b. URIPATH - this is the request URI by which the cgi files will be accessed from your webserver
-                   e.g. http://www6.ipv6.chappell-family.com/cgi-bin6/ipscan-js.cgi then set URIPATH=/cgi-bin6
+                   e.g. http://www6.chappell-family.co.uk/cgi-bin6/ipscan-js.cgi then set URIPATH=/cgi-bin6
         c. TXTTARGET and JSTARGET - these define the names of the two cgi objects that will be created
         d. SETUID_AVAILABLE and UDP_AVAILABLE - if you're running the service on a machine where you, or
                    the web server, don't have permissions to call setuid() or create UDP sockets then these features
