--- a/README
+++ b/README
@@ -176,3 +176,5 @@ If you need further help then please email me at: webmaster@chappell-family.com 
 http://ipv6.chappell-family.com/timswiki/index.php5?title=IPv6
 
 
+---
+<a href="https://scan.coverity.com/projects/timsgit-ipscan"><img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/5978/badge.svg"/></a>
